--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "dev": "node src/server",
+    "dev": "vite-node src/server.ts",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --ssrManifest --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
@@ -20,18 +21,28 @@
     "url": "https://github.com/RenanGalvao/code-challenge-prounion-1/issues"
   },
   "homepage": "https://github.com/RenanGalvao/code-challenge-prounion-1#readme",
-  "type": "module",
   "dependencies": {
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "rate-limiter-flexible": "^5.0.3",
     "sirv": "^2.0.4",
-    "vue": "^3.4.34"
+    "vue": "^3.4.34",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.0.0",
     "@vitejs/plugin-vue": "^5.1.1",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.7",
-    "vite": "^5.3.5"
+    "typescript": "^5.5.4",
+    "vite": "^5.3.5",
+    "vite-node": "^2.0.4"
   }
 }
