--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "dev": "vite-node src/index.ts",
     "prebuild": "tsc --project tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "build": "npm run build:client && npm run build:server",
