--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "dev": "vite-node src/index.ts",
     "prebuild": "tsc --project tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "build": "npm run build:client && npm run build:server",
-    "build:client": "vite build --ssrManifest --outDir dist/client",
+    "build:client": "vite build --ssrManifest .vite/ssr-manifest.json --outDir dist/client",
     "build:server": "vite build --ssr src/entry-server.js --outDir dist/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -48,6 +48,7 @@
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.4",
-    "vite-node": "^2.0.5"
+    "vite-node": "^2.0.5",
+    "vite-plugin-static-copy": "^1.0.6"
   }
 }
