chore:   giving specific names to docker images so it's easy to remove   cross-plataform compatibility setting the ENV in npm script with cross-env docs: improved

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build:
       context: frontend
       no_cache: true
+    image: code-challenge-todo-web
     deploy:
       restart_policy:
         condition: on-failure
@@ -24,6 +25,7 @@ services:
     build:
       context: backend
       no_cache: true
+    image: code-challenge-todo-api
     environment:
       - PORT=3000
     deploy:
